--- a/deploy/k8s/overlays/thirdparty-x-domain/config.yaml
+++ b/deploy/k8s/overlays/thirdparty-x-domain/config.yaml
@@ -41,3 +41,17 @@ third_party:
       enabled: true
     apple:
       enabled: true
+security_notifications:
+  notifications:
+    password_update:
+      enabled: false
+    primary_email_update:
+      enabled: false
+    email_create:
+      enabled: false
+    passkey_create:
+      enabled: false
+  from_email:
+    from_address: security@hanko.io
+    from_name: Hanko Account Security
+  notify_address: helpdesk@hanko.io
