--- a/deploy/docker-compose/config-disable-signup.yaml
+++ b/deploy/docker-compose/config-disable-signup.yaml
@@ -29,3 +29,17 @@ server:
         - "http://localhost:8888"
 account:
   allow_signup: false
+security_notifications:
+  notifications:
+    password_update:
+      enabled: false
+    primary_email_update:
+      enabled: false
+    email_create:
+      enabled: false
+    passkey_create:
+      enabled: false
+  from_email:
+    from_address: security@hanko.io
+    from_name: Hanko Account Security
+  notify_address: helpdesk@hanko.io
