--- a/deploy/docker-compose/config-rate-limiting.yaml
+++ b/deploy/docker-compose/config-rate-limiting.yaml
@@ -33,3 +33,17 @@ server:
   cors:
     allow_origins:
       - "http://localhost:8888"
+security_notifications:
+  notifications:
+    password_update:
+      enabled: false
+    primary_email_update:
+      enabled: false
+    email_create:
+      enabled: false
+    passkey_create:
+      enabled: false
+  from_email:
+    from_address: security@hanko.io
+    from_name: Hanko Account Security
+  notify_address: helpdesk@hanko.io
